<resources>
    <string name="app_name">Denuncia Ciudadana</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="mostrar_nombre">Mostrar nombre</string>
    <string name="titulo_del_reporte">Título del reporte</string>
    <string name="fecha">Fecha</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="descripci_n_del_reporte">Descripción del reporte.</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="estado">Estado</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="preferencias_de_la_app">Preferencias de la App</string>
    <string name="no_tienes_cuenta_crear_cuenta">¿No tienes cuenta? Crear cuenta</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="correo_electr_nico_o_usuario">Correo electrónico o usuario</string>
    <string name="ya_tienes_cuenta_iniciar_sesi_n">¿Ya tienes cuenta? Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="subir_foto">Subir foto</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="nombre_complet">Nombre completo</string>
    <string name="crear_cuent">Crear Cuenta</string>
    <string name="t_tulo_del_reporte">Título del reporte</string>
    <string name="descripci_n_del_report">Descripción del reporte</string>
    <string name="ubicaci">Ubicación</string>
    <string name="fech">Fecha</string>
    <string name="estad">Estado</string>
    <string name="inicio">Inicio</string>
    <string name="reportar">Reportar</string>
    <string name="chat">Chat</string>
    <string name="mis_reportes">Mis Reportes</string>
    <string name="perfil">Perfil</string>
    <string name="configuraci_n">Configuración</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="cha">chat</string>
    <string name="enviar">Enviar</string>
    <string name="escribe_un_mensaje">Escribe un mensaje...</string>
    <string name="escribe_un_mensaj">Escribe un mensaje</string>
    <string name="envia">Enviar</string>
    <item name="tvForgotPassword" type="id" />
    <item name="tvCreateAccount" type="id" />
    <item name="editTextUsuario" type="id" />
    <item name="editTextConfirmarContrasena" type="id" />
    <item name="btnSubirFoto" type="id" />
    <item name="tvYaTieneCuenta" type="id" />
    <item name="ubicacion" type="id" />
    <item name="bottom_navigation" type="id" />
    <item name="nav_inicio" type="id" />
    <item name="nav_configuracion" type="id" />
    <item name="nav_notificaciones" type="id" />
    <item name="nav_mis_reportes" type="id" />
    <item name="ubicacion" type="id" />
</resources>