<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/inicio" />
    <item
        android:id="@+id/nav_reportar"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/reportar" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/chat" />
    <item
        android:id="@+id/nav_mis_reportes"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/mis_reportes" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/perfil" />
    <item
        android:id="@+id/nav_configuracion"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/configuraci_n" />
    <item
        android:id="@+id/nav_notificaciones"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/notificaciones" />
</menu>