<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:text="@string/crear_cuent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_complet"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/nombre_de_usuario"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextConfirmarContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/confirmar_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnSubirFoto"
        android:text="@string/subir_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:text="@string/registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/tvYaTieneCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ya_tienes_cuenta_iniciar_sesi_n"
        android:textColor="#0277BD" />

</LinearLayout>
